--- a/base-styles.css
+++ b/base-styles.css
@@ -90,6 +90,9 @@
   --bg-navbar: #f5f5f760;
   --bg-navbar-borde: #f5f5f730;
 
+  --bg-btn-contacto: #eee;
+  --border-contacto: #999;
+
   --bg-btn-active: #0002;
   --bg-btn-active-border: #0003;
 
@@ -100,7 +103,7 @@
 }
 /* @media (prefers-color-scheme: dark) { */
 [data-theme="dark"] {
-  --text-icon-color: #f8f9fc;
+  --text-icon-color: #d5d8dc;
 
   --title-first-border: #600;
   --title-text: #f00;
@@ -116,6 +119,9 @@
 
   --bg-navbar: #0006;
   --bg-navbar-borde: #0003;
+
+  --bg-btn-contacto: #0a0a0a;
+  --border-contacto: #1b1b1b;
 
   --bg-btn-active: #0009;
   --bg-btn-active-border: #0003;
