--- a/style.css
+++ b/style.css
@@ -1,4 +1,24 @@
 @import "./base-styles.css";
+@font-face {
+  font-family: "Inter";
+  src: url(./font/Inter-Medium.woff2) format("woff2"),
+    url(./font/Inter-Medium.woff) format("woff");
+  font-weight: 500;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Inter";
+  src: url(./font/Inter-Bold.woff2) format("woff2"),
+    url(./font/Inter-Bold.woff) format("woff");
+  font-weight: 700;
+  font-display: swap;
+}
+@font-face {
+  font-family: "League Gothic";
+  src: url(./font/LeagueGothic-Regular-VariableFont_wdth.woff2) format("woff2"),
+    url(./font/LeagueGothic-Regular-VariableFont_wdth.woff) format("woff");
+  font-display: swap;
+}
 
 /* ********** Components ********** */
 
@@ -219,7 +239,7 @@
       }
 
       input[type="submit"] {
-        font-family: var(--font);
+        font-family: inherit;
         font-size: var(--font-16);
         margin-top: var(--box-16-18);
         margin-bottom: var(--box-8-9);
@@ -329,7 +349,7 @@
 .modal-form input {
   &::placeholder {
     color: #fff8;
-    font-family: var(--font);
+    font-family: inherit;
   }
 }
 
@@ -809,7 +829,8 @@ main > section {
     padding-top: 0.5rem;
     color: #1177ff;
     text-shadow: 0 0 5px #000;
-    font-family: "Inter";
+    /* font-family: "Inter"; */
+    font-family: inherit;
     font-size: 1.5rem;
     text-align: right;
 
@@ -834,7 +855,7 @@ main > section {
       border: none;
       border-radius: 30px;
       font-size: var(--font-24);
-      font-family: "Inter";
+      font-family: inherit;
       color: #efefef;
       text-shadow: 0 0 5px #000;
       background-image: linear-gradient(140deg, #111, #222);
@@ -1045,7 +1066,7 @@ main > section {
       border: none;
       outline: none;
       background-color: transparent;
-      font-family: var(--font);
+      font-family: inherit;
       padding: 0.5rem 1rem;
 
       &::placeholder {
