--- a/base-styles.css
+++ b/base-styles.css
@@ -93,6 +93,9 @@
   --bg-btn-contacto: #eee;
   --border-contacto: #999;
 
+  --correo-contacto: #111;
+  --correo-shadow: #444;
+
   --bg-btn-active: #0002;
   --bg-btn-active-border: #0003;
 
@@ -122,6 +125,8 @@
 
   --bg-btn-contacto: #0a0a0a;
   --border-contacto: #1b1b1b;
+  --correo-contacto: #fff;
+  --correo-shadow: #fff;
 
   --bg-btn-active: #0009;
   --bg-btn-active-border: #0003;
