--- a/style.css
+++ b/style.css
@@ -122,6 +122,15 @@
   gap: 1.5rem;
   transition: transform var(--transition-m);
 
+  a[title="Email"] {
+    svg {
+      fill: var(--correo-contacto);
+      filter: drop-shadow(0 0 9px var(--correo-shadow));
+      &:hover {
+        filter: none;
+      }
+    }
+  }
   a:active {
     transform: scale(1.05);
     background-color: var(--bg-btn-active);
