Style: shadow de correo

--- a/base-styles.css
+++ b/base-styles.css
@@ -126,7 +126,7 @@
   --bg-btn-contacto: #0a0a0a;
   --border-contacto: #1b1b1b;
   --correo-contacto: #fff;
-  --correo-shadow: #fff;
+  --correo-shadow: #e3f4ff;
 
   --bg-btn-active: #0009;
   --bg-btn-active-border: #0003;
