--- a/style.css
+++ b/style.css
@@ -31,6 +31,10 @@
   display: flex;
   justify-content: center;
 
+  #textCopy {
+    /* user-select: none; */
+    /* pointer-events: none; */
+  }
   button {
     padding: 0.3rem 0.5rem;
     border-radius: 5rem;
