--- a/base-styles.css
+++ b/base-styles.css
@@ -90,6 +90,7 @@
 
   --bg-navbar: #f5f5f760;
   --bg-navbar-borde: #f5f5f730;
+  --btn-navbar-active-border: #0003;
 
   --bg-btn-contacto: #eee;
   --border-contacto: #999;
@@ -124,6 +125,7 @@
 
   --bg-navbar: #0006;
   --bg-navbar-borde: #0003;
+  --btn-navbar-active-border: #fff3;
 
   --bg-btn-contacto: #0a0a0a;
   --border-contacto: #1b1b1b;
