Feat: semántica HTML <strong>

--- a/style/style.css
+++ b/style/style.css
@@ -553,7 +553,8 @@ main > section {
           0.5px -0.5px 0px var(--title-first-border),
           0 0 10px var(--title-first);
       }
-      h3 {
+      strong {
+        font-size: var(--font-20);
         transform: translateY(50px);
         filter: blur(20px);
         opacity: 0;
@@ -978,8 +979,8 @@ main > section {
     h1 {
       font-size: var(--font-36);
     }
-    h3 {
-      font-size: var(--font-24);
+    strong {
+      font-size: var(--font-24) !important;
     }
     & .box-contact a > svg {
       width: 34px;
