--- a/style/style.css
+++ b/style/style.css
@@ -879,6 +879,11 @@ main > section {
     flex-direction: column;
     align-items: center;
     gap: 1rem;
+
+    span {
+      font-weight: 600;
+      font-size: var(--font-20);
+    }
   }
   small {
     position: absolute;
