--- a/style/base-styles.css
+++ b/style/base-styles.css
@@ -1,3 +1,32 @@
+/*! Orden de declaración */
+/**••• PODICIONAMIENTO •••••••• 
+  position:▶ static | relative | absolute | fixed | sticky.
+  ▶ top | right | bottom | left.
+  ▶ z-index | float | clear  */
+/**••• MODELO DE CAJA •••••••••
+  display:▶ block | inline | flex | grid.
+  flex/grid:▶ flex-direction | grid-template-row | etc.
+  ▶ width | height.
+  ▶ padding | border | margin.
+  ▶ box-sizing.
+  ▶ overflow. */
+/**••• TIPOGRAFIA •••••••••••••
+  font:▶ -family | -size | -weight | -style.
+  ▶ line-height.
+  ▶ color.
+  text:▶ -align | -decoration | -transform.
+  ▶ letter-spacing, word-spacing. */
+/**••• VISUAL  ••••••••••••••••
+  background:▶ -color | -image  | -position | -etc.
+  ▶ border-radius.
+  ▶ box-shadow, text-shadow.
+  ▶ opacity.
+  ▶ transform. */
+/**••• ANIMACIONES ••••••••••••
+  ▶ transition, animation, transform  */
+/**••• OTROS ••••••••••••••••••
+  ▶ opacity, cursor, pointer-events    */
+
 /* ********** Custom Properties ********** */
 :root {
   --first-color: #fc3d39;
@@ -157,12 +186,12 @@ html {
 }
 
 body {
-  overflow-x: hidden;
-  margin: 0;
+  min-height: 100dvh;
   padding: 0;
+  margin: 0;
+  overflow-x: hidden;
   color: var(--text-icon-color);
   background-color: var(--bg-body);
-  min-height: 100dvh;
 }
 
 a {
@@ -181,9 +210,9 @@ a {
 }
 
 h1 {
+  margin: 0;
   font-family: var(--font);
   font-size: var(--font-32);
-  margin: 0;
   text-wrap: balance;
 }
 h2 {
@@ -216,9 +245,9 @@ ul {
   padding-left: 0;
 }
 li {
-  list-style: none;
   font-size: var(--font-13);
   /* line-height: 1.6; */
+  list-style: none;
 }
 
 img {
